# visaire-animation

./: .env.example  README.md  main.py  manim_runner.py  pyproject.toml  requirements-dev.txt  requirements.txt
static/: app.js  style.css
templates/: index.html
